fix bug (overlapping download file word)

--- a/src/components/Download.css
+++ b/src/components/Download.css
@@ -51,7 +51,7 @@
     margin: 0 !important;
 }
 
-@media only screen and (max-width: 750px) {
+@media only screen and (max-width: 960px) {
     .col.span-2-of-8 {
         width: 33.33%;
     }
@@ -63,7 +63,7 @@
     }
 }
 
-@media only screen and (max-width: 650px) {
+@media only screen and (max-width: 900px) {
     .row{
     }
     .col.span-2-of-8 {
@@ -82,7 +82,7 @@
     }
 }
 
-@media only screen and (max-width: 515px) {
+@media only screen and (max-width: 660px) {
     .col.span-2-of-6 {
         width: 50% !important;
     }
